--- a/02-introduction-to-R.Rmd
+++ b/02-introduction-to-R.Rmd
@@ -20,8 +20,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 After this section you should be able to:
 
-1. Do data manipulation
-2. Do basic statistical analysis and plots
+1. Load, explore and manioulate data in R
 
 
 ## Introduction
@@ -239,8 +238,24 @@ because we only have one dimension now, no 2
 head(ChickWeight$weight[ChickWeight$Diet==4 & ChickWeight$Time>6 & ChickWeight$Time<20])
 ```
 
+## Activity: 
+
+This activity integrates knowledge from the previous chapter.
+
+**1. Remove the first and last row of the ChickWeight data frame**
+**2. Create a vector with the second column from the data frame**
+
 
 # Visualization and Statistical test
+
+## Objectives
+
+After this section you should be able to:
+
+1. Plot and explore the data in many ways.
+2. Do statistical tests on the data.
+
+## Introduction
 
 We will use the same data we already explored in last chapter. Remember: chickens weight, age (Time) for different diets.
 
@@ -268,9 +283,15 @@ qplot(data=ChickWeight,x = weight, y=Time, geom = c("line","point"), colour=Diet
 ```
 The same using ggplot
 ```{r warning=FALSE, message=FALSE,fig.cap="Point and line plots"}
-ggplot(data = ChickWeight, aes(x = weight, y=Time,colour=Diet))+ #data and basic things about the plot
+ggplot(data = ChickWeight, aes(y = weight, x=Time,colour=Diet))+ #data and basic things about the plot
   geom_point() + #add the type of plot
   scale_colour_brewer(palette = "Set1") #add a colot pallet
+
+ggplot(data = ChickWeight, aes(y = weight, x=Time,colour=Diet))+ #data and basic things about the plot
+  geom_point() + #add the type of plot
+  geom_smooth() + #add a trend line of mean plus se
+  scale_colour_brewer(palette = "Set1")
+
 ```
 ### Historgam and density plots
 
