--- a/01-getting-started.Rmd
+++ b/01-getting-started.Rmd
@@ -64,22 +64,21 @@ Here we can create a project in which everything will be integrated. This might 
 
 Regarding RStudio see the image bellow:
 
-```{r, out.width = "500px", echo=FALSE,fig.align = "center",fig.cap="Regular RStudio setup."}
+```{r, out.width = "800px", echo=FALSE,fig.align = "center",fig.cap="Regular RStudio setup."}
 knitr::include_graphics("./images/rstudio.png")
 ```
 
-Upper left panel: the script. Everything you write here you can just execute by pressing CTR + ENTER. 
+*Upper left panel*: the script. Everything you write here you can just execute by pressing CTR + ENTER. 
 
-Upper right panel: the environment.
+*Upper right panel*: the environment.
 
-Down left panel: the “console”, work exactly as the terminal. Is the representation of the terminal just for R. If you want, you can run other things that are not R in the shell (not the console), if you are interested read this nice article https://support.rstudio.com/hc/en-us/articles/115010737148-Using-the-RStudio-Terminal 
+*Lower left panel*: the “console”, work exactly as the terminal. Is the representation of the terminal just for R. If you want, you can run other things that are not R in the shell (not the console), if you are interested read this nice article https://support.rstudio.com/hc/en-us/articles/115010737148-Using-the-RStudio-Terminal 
 
-Down Right: The multi panel that allows you to see and browse the files, plots and help pages.
-
+*Lower Right*: The multi layer panel that allows you to see and browse the files, plots and help pages.
 
 ## Create a project
 
-1. Open RStudio:
+*1. Open RStudio:*
 
 Create a project: File > New  Project... > Existing  Directory > choose the folder. 
 
@@ -89,7 +88,7 @@ Automatically this should change the working directory to this folder. However, 
 getwd()  #Get working  directory
 ```
 
-2. Create the script: File > New  File... >R Script  
+*2. Create the script:* File > New  File... >R Script  
 
 Now we can start putting things in the script and running them in the “console” or representation of the shell in RStudio. So, let’s check the working directory and change it if needed.
 
@@ -110,7 +109,7 @@ I recommend to save at least the script everytime you can. File > save
 
 ## Useful shortcuts in RStudio:
 
-* tab: auto-complete function
+* tab: auto-complete 
 
 * control + the up arrow or command + up arrow: auto-complete tool that works only in the interactive console
 
@@ -302,6 +301,21 @@ for(i in t){
   print(c)
 }
 ```
+This is usefull for other type of lists and vectors
+```{r warning=FALSE, message=FALSE}
+vec<-c("a","b")
+
+for (i in c(vec)){
+  print(paste0("i is: ",i))
+}
+```
+And we can access it in differen ways:
+```{r warning=FALSE, message=FALSE}
+for (i in 1:length(vec)){
+  print(paste0("i is: ",i))
+  print(paste0("elemnt i is: ",vec[i]))
+}
+```
 
 ## Conditions
 
@@ -399,8 +413,17 @@ gsub(pattern = "d",replacement = "I am replacing d",x = chrvec)
 
 ## Useful resources
 
-* R for data science: https://r4ds.had.co.nz
-* A package to learn R 
+* A package to learn R:
+[Swirl](https://swirlstats.com/students.html)
+* Support from RStudio: 
+[Usefull resource with usefull packages in R](https://support.rstudio.com/hc/en-us/articles/201057987-Quick-list-of-useful-R-packages)
+* Girhub:
+[Bioinformatic resources](https://github.com/ossu/bioinformatics)
+* Free books: 
+[R for data science](https://r4ds.had.co.nz)
+[unix command line 1](https://www.grymoire.com/) 
+[unix command line 2](http://linuxcommand.org/tlcl.php) 
+[data structure with python](https://runestone.academy/runestone/books/published/pythonds/index.html)
 
 ## Activity: 
 
@@ -421,3 +444,4 @@ plus.one.onlyifpos(20)
 plus.one.onlyifpos(-20)
 
 ```
+
